--- a/src/views/index.html
+++ b/src/views/index.html
@@ -4,7 +4,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>农信社一卡通</title>
+  <title>缴费信息系统</title>
   <meta name="renderer" content="webkit">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=0">
@@ -66,7 +66,7 @@
       <div class="layui-side layui-side-menu">
         <div class="layui-side-scroll">
           <div class="layui-logo" lay-href="home/console.html">
-            <span>一卡通管理系统</span>
+            <span>缴费信息系统</span>
           </div>
           
           <ul id="navs-main" class="layui-nav layui-nav-tree" lay-shrink="all" id="LAY-system-side-menu" lay-filter="layadmin-system-side-menu">
