add report and optimize detial

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -128,6 +128,12 @@
                 <cite>学校管理</cite>
               </a>
             </li>
+            <li data-name="template" class="layui-nav-item">
+              <a href="javascript:;" lay-href="report/list.html" lay-tips="报表管理" lay-direction="2">
+                <i class="layui-icon layui-icon-survey"></i>
+                <cite>报表管理</cite>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
