--- a/src/views/report/list.html
+++ b/src/views/report/list.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>学生管理</title>
+    <title>报表管理</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport"
@@ -145,7 +145,7 @@
                 , page: true //开启分页
                 , cols: [[ //表头
                     { checkbox: true, width: "5%" }
-                    , { field: 'id', title: 'ID', width: "5%"}
+                    , { field: 'id', title: 'ID', width: "5%" }
                     , { field: 'name', title: '姓名', width: "10%" }
                     , { field: 'pid', title: '身份证号', width: "20%" }
                     , { field: 'schoolname', title: '学校', width: "15%" }
@@ -220,7 +220,7 @@
                             , data: tabData
                             , cols: [[ //表头
                                 { checkbox: true, width: "5%" }
-                                , { field: 'id', title: 'ID', width: "5%"}
+                                , { field: 'id', title: 'ID', width: "5%" }
                                 , { field: 'name', title: '姓名', width: "10%" }
                                 , { field: 'pid', title: '身份证号', width: "20%" }
                                 , { field: 'schoolname', title: '学校', width: "15%" }
