--- a/src/views/class/manage.html
+++ b/src/views/class/manage.html
@@ -33,11 +33,11 @@
           <button id="addBt" class="layui-btn"><i class="layui-icon layui-icon-add-circle"></i>新增班级</button>
           <button id="deleteBt" class="layui-btn"><i class="layui-icon layui-icon-delete"></i>删除班级</button>
           <button id="changeBt" class="layui-btn"><i class="layui-icon layui-icon-edit"></i>修改班级</button>
-          <button id="uploadClBt" class="layui-btn"><i class="layui-icon layui-icon-upload-drag"></i>导入班级信息</button>
+          <!-- <button id="uploadClBt" class="layui-btn"><i class="layui-icon layui-icon-upload-drag"></i>导入班级信息</button>
           <button onclick="exportClTe()" class="layui-btn"><i class="layui-icon layui-icon-form"></i>下载班级信息导入模板</button>
           <button onclick="exportCl()" class="layui-btn"><i class="layui-icon layui-icon-export"></i>导出班级信息</button>
           <button onclick="sub.style.display = 'block'" class="layui-btn"><i
-              class="layui-icon layui-icon-cols"></i>打开下载列表</button>
+              class="layui-icon layui-icon-cols"></i>打开下载列表</button> -->
         </div>
       </div>
       <div class="add-box layui-anim layui-anim-scale" id="addBox">
