--- a/src/views/jurisdiction/role.html
+++ b/src/views/jurisdiction/role.html
@@ -43,7 +43,7 @@
                 </div>
                 <div class="layui-form-item input-box">
                     <label class="layui-form-label">菜单权限</label>
-                    <div class="layui-input-block">
+                    <div class="layui-input-block" onclick="handleSetNav(0)">
                         <input type="text" disabled name="nav" placeholder="点击下方按钮配置" autocomplete="off"
                             class="layui-input">
                     </div>
@@ -74,7 +74,7 @@
                 </div>
                 <div class="layui-form-item input-box">
                     <label class="layui-form-label">菜单权限</label>
-                    <div class="layui-input-block">
+                    <div class="layui-input-block" onclick="handleSetNav(1)">
                         <input type="text" disabled name="nav" placeholder="点击下方按钮配置" autocomplete="off"
                             class="layui-input">
                     </div>
