--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -71,7 +71,7 @@
         </div>
         <div class="layui-form-item input-box">
           <label class="layui-form-label">金额</label>
-          <div class="layui-input-block">
+          <div class="layui-input-block" onclick="handleSetDetail(0)">
             <input id="addSum" type="text" disabled name="sum" placeholder="点击配置金额按钮设置" autocomplete="off"
               class="layui-input">
           </div>
@@ -163,7 +163,7 @@
         </div>
         <div class="layui-form-item input-box">
           <label class="layui-form-label">金额</label>
-          <div class="layui-input-block">
+          <div class="layui-input-block" onclick="handleSetDetail(1)">
             <input id="changeSum" type="text" disabled name="sum" placeholder="点击配置金额按钮设置" autocomplete="off"
               class="layui-input">
           </div>
