--- a/src/views/jurisdiction/role.html
+++ b/src/views/jurisdiction/role.html
@@ -160,8 +160,8 @@
                 , data: []
                 , cols: [[ // 表头
                     { checkbox: true, width: "5%" }
-                    , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-                    , { field: 'name', title: '角色名', width: "15%", minWidth: 180 }
+                    , { field: 'id', title: 'ID', width: "5%" }
+                    , { field: 'name', title: '角色名', width: "15%" }
                     , { field: 'navs', title: '菜单权限', width: "75%" }
                 ]]
             });
@@ -218,8 +218,8 @@
                             , data: data
                             , cols: [[ // 表头
                                 { checkbox: true, width: "5%" }
-                                , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-                                , { field: 'name', title: '角色名', width: "15%", minWidth: 180 }
+                                , { field: 'id', title: 'ID', width: "5%" }
+                                , { field: 'name', title: '角色名', width: "15%" }
                                 , { field: 'navs', title: '菜单权限', width: "75%" }
                             ]]
                         });
