--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -288,7 +288,7 @@
           , { field: 'end', title: '结束日期', width: "10%" }
           , { field: 'schoolname', title: '学校', width: "10%" }
           , { field: 'gradename', title: '年级', width: "10%" }
-          , { field: 'sum', title: '金额', width: "10%", minWidth: 150 }
+          , { field: 'sum', title: '金额', width: "10%" }
           , { field: 'detail', title: '详细', width: "15%" }
         ]]
       });
@@ -391,7 +391,7 @@
                 , { field: 'templateNo', title: '收费项目编号', width: "15%" }
                 , { field: 'date', title: '创建日期', width: "15%" }
                 , { field: 'schoolname', title: '学校', width: "10%" }
-                , { field: 'gradename', title: '年级', width: "10%", minWidth: 100}
+                , { field: 'gradename', title: '年级', width: "10%"}
                 , { field: 'sum', title: '金额', width: "10%" }
                 , { field: 'detail', title: '详细', width: "15%" }
               ]]
