--- a/src/views/school/manage.html
+++ b/src/views/school/manage.html
@@ -147,8 +147,8 @@
                 , page: true
                 , cols: [[ //表头
                     { checkbox: true, width: "5%" }
-                    , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-                    , { field: 'name', title: '学校名', width: "15%", minWidth: 180 }
+                    , { field: 'id', title: 'ID', width: "5%" }
+                    , { field: 'name', title: '学校名', width: "15%" }
                     , { field: 'area', title: '县/区/市', width: "15%" }
                     , { field: 'address', title: '详细地址', width: "60%" }
                 ]]
@@ -204,8 +204,8 @@
                             , data: tabData
                             , cols: [[ //表头
                                 { checkbox: true, width: "5%" }
-                                , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-                                , { field: 'name', title: '学校名', width: "15%", minWidth: 180 }
+                                , { field: 'id', title: 'ID', width: "5%" }
+                                , { field: 'name', title: '学校名', width: "15%" }
                                 , { field: 'area', title: '县/区/市', width: "15%" }
                                 , { field: 'address', title: '详细地址', width: "60%" }
                             ]]
