--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -269,13 +269,13 @@
         , page: true //开启分页
         , cols: [[ //表头
           { checkbox: true, width: "5%" }
-          , { field: 'id', title: 'ID', width: "7%", minWidth: 60 }
-          , { field: 'name', title: '姓名', width: "10%", minWidth: 60 }
-          , { field: 'sex', title: '性别', width: "8%", minWidth: 100 }
-          , { field: 'pid', title: '身份证号', width: "20%", minWidth: 200 }
-          , { field: 'schoolname', title: '学校', width: "20%", minWidth: 100 }
-          , { field: 'gradename', title: '年级', width: "15%", minWidth: 100 }
-          , { field: 'classname', title: '班级', width: "15%", minWidth: 100 }
+          , { field: 'id', title: 'ID', width: "7%" }
+          , { field: 'name', title: '姓名', width: "10%" }
+          , { field: 'sex', title: '性别', width: "8%" }
+          , { field: 'pid', title: '身份证号', width: "20%" }
+          , { field: 'schoolname', title: '学校', width: "20%" }
+          , { field: 'gradename', title: '年级', width: "15%" }
+          , { field: 'classname', title: '班级', width: "15%" }
         ]]
       });
 
@@ -529,13 +529,13 @@
               , data: tabData
               , cols: [[ //表头
                 { checkbox: true, width: "5%" }
-                , { field: 'id', title: 'ID', width: "7%", minWidth: 60 }
-                , { field: 'name', title: '姓名', width: "10%", minWidth: 60 }
-                , { field: 'sex', title: '性别', width: "8%", minWidth: 100 }
-                , { field: 'pid', title: '身份证号', width: "20%", minWidth: 200 }
-                , { field: 'schoolname', title: '学校', width: "20%", minWidth: 100 }
-                , { field: 'gradename', title: '年级', width: "15%", minWidth: 100 }
-                , { field: 'classname', title: '班级', width: "15%", minWidth: 100 }
+                , { field: 'id', title: 'ID', width: "7%" }
+                , { field: 'name', title: '姓名', width: "10%" }
+                , { field: 'sex', title: '性别', width: "8%" }
+                , { field: 'pid', title: '身份证号', width: "20%" }
+                , { field: 'schoolname', title: '学校', width: "20%" }
+                , { field: 'gradename', title: '年级', width: "15%" }
+                , { field: 'classname', title: '班级', width: "15%" }
               ]]
             });
 
