--- a/src/views/wx/manage.html
+++ b/src/views/wx/manage.html
@@ -137,10 +137,10 @@
         , data: []
         , cols: [[ //表头
           { checkbox: true, width: "5%" }
-          , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-          , { field: 'school', title: '绑定机构', width: "30%", minWidth: 200 }
-          , { field: 'wxid', title: '公开ID', width: "30%", minWidth: 200 }
-          , { field: 'token', title: 'Token', width: "30%", minWidth: 200 }
+          , { field: 'id', title: 'ID', width: "5%" }
+          , { field: 'school', title: '绑定机构', width: "30%" }
+          , { field: 'wxid', title: '公开ID', width: "30%" }
+          , { field: 'token', title: 'Token', width: "30%" }
         ]]
       });
     })
@@ -189,10 +189,10 @@
               , data: tabData
               , cols: [[ //表头
                 { checkbox: true, width: "5%" }
-                , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-                , { field: 'school', title: '绑定机构', width: "30%", minWidth: 200 }
-                , { field: 'wxid', title: '公开ID', width: "30%", minWidth: 200 }
-                , { field: 'token', title: 'Token', width: "30%", minWidth: 200 }
+                , { field: 'id', title: 'ID', width: "5%" }
+                , { field: 'school', title: '绑定机构', width: "30%" }
+                , { field: 'wxid', title: '公开ID', width: "30%" }
+                , { field: 'token', title: 'Token', width: "30%" }
               ]]
             });
 
