--- a/src/views/jurisdiction/manage.html
+++ b/src/views/jurisdiction/manage.html
@@ -185,11 +185,11 @@
         , data: []
         , cols: [[ //表头
           { checkbox: true, width: "5%" }
-          , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-          , { field: 'name', title: '姓名', width: "10%", minWidth: 120 }
-          , { field: 'phone', title: '号码', width: "20%", minWidth: 240 }
-          , { field: 'roleName', title: '角色', width: "20%", minWidth: 120 }
-          , { field: 'power', title: '管理院校', width: "40%", minWidth: 600 }
+          , { field: 'id', title: 'ID', width: "5%" }
+          , { field: 'name', title: '姓名', width: "10%" }
+          , { field: 'phone', title: '号码', width: "20%" }
+          , { field: 'roleName', title: '角色', width: "20%" }
+          , { field: 'power', title: '管理院校', width: "40%" }
         ]]
       });
     })
@@ -261,11 +261,11 @@
               , data: tabData
               , cols: [[ //表头
                 { checkbox: true, width: "5%" }
-                , { field: 'id', title: 'ID', width: "5%", minWidth: 60 }
-                , { field: 'name', title: '姓名', width: "10%", minWidth: 120 }
-                , { field: 'phone', title: '号码', width: "20%", minWidth: 240 }
-                , { field: 'roleName', title: '角色', width: "20%", minWidth: 120 }
-                , { field: 'schools', title: '管理院校', width: "40%", minWidth: 600 }
+                , { field: 'id', title: 'ID', width: "5%" }
+                , { field: 'name', title: '姓名', width: "10%" }
+                , { field: 'phone', title: '号码', width: "20%" }
+                , { field: 'roleName', title: '角色', width: "20%" }
+                , { field: 'schools', title: '管理院校', width: "40%" }
               ]]
             });
 
