--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -550,7 +550,7 @@
 
                 //首次不执行
                 if (!first) {
-                  reloadTable(wxid, String(obj.curr));
+                  reloadTable(name, class_id, String(obj.curr));
                 }
               }
             });
