--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -46,7 +46,7 @@
             </select>
           </div>
         </div>
-        <div class="layui-form-item input-box">
+        <!-- <div class="layui-form-item input-box">
           <label class="layui-form-label">年级</label>
           <div class="layui-input-block">
             <select class="gradeSelect" name="grade" lay-verify="required">
@@ -56,7 +56,7 @@
               <option value="G3">高三</option>
             </select>
           </div>
-        </div>
+        </div> -->
         <div class="layui-form-item input-box">
           <label class="layui-form-label">模板名称</label>
           <div class="layui-input-block">
@@ -138,7 +138,7 @@
             </select>
           </div>
         </div>
-        <div class="layui-form-item input-box">
+        <!-- <div class="layui-form-item input-box">
           <label class="layui-form-label">年级</label>
           <div class="layui-input-block">
             <select class="gradeSelect" name="grade" lay-verify="required">
@@ -148,7 +148,7 @@
               <option value="G3">高三</option>
             </select>
           </div>
-        </div>
+        </div> -->
         <div class="layui-form-item input-box">
           <label class="layui-form-label">模板名称</label>
           <div class="layui-input-block">
