--- a/src/views/home/console.html
+++ b/src/views/home/console.html
@@ -14,7 +14,9 @@
 </head>
 <body>
   
-  <div class="main-article">欢迎使用</div>
+  <div class="main-article">
+    <div class="title">欢迎使用</div>
+  </div>
 
   <script src="../../layuiadmin/layui/layui.js?t=1"></script>  
   <script>
