--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -240,7 +240,7 @@
           <div class="btn-box">
             <button class="layui-btn" onclick="addDetailProject()">新增项目</button>
             <button class="layui-btn" onclick="deleteDetailProject()">删除项目</button>
-            <button class="layui-btn" onclick="getDatailData()">确定</button>
+            <button class="layui-btn" onclick="getDatailData()">保存所配置金额</button>
           </div>
         </div>
       </div>
