--- a/src/layuiadmin/style/formBox.css
+++ b/src/layuiadmin/style/formBox.css
@@ -14,6 +14,8 @@
     width: 320px;
 }
 .form-box .input-box.hint {
+    height: 38px;
+    line-height: 38px;
     text-align: center;
     color: rgb(202, 199, 199);
 }
