--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -556,7 +556,7 @@
 
                 //首次不执行
                 if (!first) {
-                  reloadTable(name, class_id, String(obj.curr));
+                  reloadTable(name, idnumber ,class_id, String(obj.curr));
                 }
               }
             });
