--- a/src/views/student/manage.html
+++ b/src/views/student/manage.html
@@ -585,6 +585,7 @@
               elem: "#demoTree",
               data: res.result, // 使用data加载
               checkbar: true,
+              width: '320',
               checkbarType: "no-all",
               // checkbarData: "halfChoose",
               checkbarFun: {
