--- a/src/layuiadmin/style/student.css
+++ b/src/layuiadmin/style/student.css
@@ -40,7 +40,7 @@ html, body {
 
 .main-article .right {
     flex: 1 1 auto;
-    height: 100%;
+    min-height: 100%;
     background-color: #f2f2f2;
     display: flex;
     flex-direction: column;
