--- a/src/views/payment/template.html
+++ b/src/views/payment/template.html
@@ -192,9 +192,9 @@
           </div>
           <div class="center">
             <div class="dialog-btn-box">
-              <button id="bindCl" class="layui-btn" onclick="congfigTemGr()">启用班级<i
+              <button id="bindCl" class="layui-btn" onclick="congfigTemGr()">启用年级<i
                   class="layui-icon layui-icon-next"></i></button>
-              <button id="unboundCl" class="layui-btn" onclick="deleteTemGr()"><i class="layui-icon layui-icon-prev"></i>禁用班级</button>
+              <button id="unboundCl" class="layui-btn" onclick="deleteTemGr()"><i class="layui-icon layui-icon-prev"></i>禁用年级</button>
               <button id="close-bind-dialog" class="layui-btn" onclick="closeDialog()"><i
                   class="layui-icon layui-icon-close"></i>关闭</button>
             </div>
