change style of login

--- a/src/views/user/login2.html
+++ b/src/views/user/login2.html
@@ -41,7 +41,7 @@
 			</div>-->
 
 		<div class="flex_center header_info">
-			<div class="loginImg">
+			<div class="loginImg mr">
 				<img src="../../layuiadmin/img/company.png" />
 			</div>
 
@@ -49,12 +49,12 @@
 					<img src="../../static/img/platform.png" />
 				</div>-->
 
-			<div class="flex_start loginImg platform">
-				<!--<img src="../../static/img/platform.png" />-->
+
+			<!-- <div class="flex_start loginImg platform">
 				<div class="login_icon">
 					<img src="../../layuiadmin/img/platform.png" />
 				</div>
-			</div>
+			</div> -->
 
 			<div class="layadmin-user-login-main">
 
