--- a/src/layuiadmin/style/login2.css
+++ b/src/layuiadmin/style/login2.css
@@ -60,9 +60,6 @@ body,
 }
 
 .loginImg {
-	height: 3rem;
-	width: auto;
-	min-width: 8rem;
 	margin: 0 3vw;
 }
 
@@ -72,8 +69,8 @@ body,
 }
 
 .loginImg img {
-	width: 100%;
-	height: 100%;
+	width: 200px;
+	height: auto;
 }
 
 .login_icon {
@@ -419,3 +416,9 @@ body,
 .ladmin-user-login-theme ul li:hover {
 	opacity: 0.9
 }
+
+
+.mr {
+	margin-right: 30%;
+}
+
