add gradeMange nav

--- a/src/views/index.html
+++ b/src/views/index.html
@@ -46,7 +46,7 @@
           </li>
           <li class="layui-nav-item" lay-unselect>
             <a href="javascript:;">
-              <cite id="index-username-box">贤心</cite>
+              <cite id="index-username-box">名字</cite>
             </a>
             <dl class="layui-nav-child">
               <dd  style="text-align: center;" onclick="goOut()"><a>退出</a></dd>
@@ -80,6 +80,12 @@
               <a href="javascript:;" lay-href="school/manage.html" lay-tips="学校管理" lay-direction="2">
                 <i class="layui-icon layui-icon-home"></i>
                 <cite>学校管理</cite>
+              </a>
+            </li>
+            <li data-name="template" class="layui-nav-item">
+              <a href="javascript:;" lay-href="grade/manage.html" lay-tips="年级管理" lay-direction="2">
+                <i class="layui-icon layui-icon-dialogue"></i>
+                <cite>年级管理</cite>
               </a>
             </li>
             <li data-name="component" class="layui-nav-item">
